# Private_BTC_Lending_dApp

./: README.md
Private_BTC_Lending_dApp/: .gitignore  MIGRATION_TO_SCAFFOLD_STARK_2.md  Readme.md  package.json
Private_BTC_Lending_dApp/backend/: Cargo.toml  README.md  schema.graphql
Private_BTC_Lending_dApp/backend/docs/: API_SPEC.md
Private_BTC_Lending_dApp/backend/migrations/: 0001_multichain_private_lending.sql
Private_BTC_Lending_dApp/backend/src/: config.rs  main.rs  types.rs
Private_BTC_Lending_dApp/backend/src/api/: graphql.rs  mod.rs  routes.rs
Private_BTC_Lending_dApp/backend/src/chain/: listener.rs
Private_BTC_Lending_dApp/backend/src/domain/: lending.rs
Private_BTC_Lending_dApp/backend/src/herodotus/: client.rs
Private_BTC_Lending_dApp/backend/src/relayer/: queue.rs  worker.rs
Private_BTC_Lending_dApp/backend/src/starknet/: hub_client.rs
Private_BTC_Lending_dApp/backend/src/watchers/: mod.rs  oracle_aggregator.rs  reorg_watcher.rs
Private_BTC_Lending_dApp/contracts/: Scarb.toml
Private_BTC_Lending_dApp/docs/: BITBOND_LOGO_PROMPTS.md  MULTICHAIN_EXPANSION_ARCHITECTURE.md
Private_BTC_Lending_dApp/frontend/: package-lock.json  package.json  tsconfig.json
Private_BTC_Lending_dApp/scripts/: install_tools.sh  migrate_to_scaffold_stark_2.sh  with-env.sh
Private_Voting_System/: .tool-versions  Readme.md
Private_Voting_System/circuits/: private_vote.nr
Private_Voting_System/frontend/: index.html  package-lock.json  package.json
Private_Voting_System/frontend/src/app/: abi.ts  (+3 more)
Private_Voting_System/scripts/: public_inputs_order.md
(+27 files in other folders)
